--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Wheel of Fortune</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="js/main.js" defer></script>
     <link href="css/main.css" rel="stylesheet" type="text/css">
@@ -12,18 +12,37 @@
   <div id="wrap">
 
     <div id="leftField">
+
       <div id="questionWrap">
         <h2 id="question"></h2>
       </div>
+
       <div id="wordWrap">
-<!--        <h1 id="word"></h1>-->
+        <h1 id="word"></h1>
+        <input type="text" id="guessLetter">
+        <button id="submitLetter">Ввести букву</button>
+        <input type="text" id="guessWord">
+        <button id="submitWord">Ввести слово</button>
       </div>
-      <div id="gameWrap"></div>
+
+      <div id="gameWrap">
+
+          <div id="wheel"><img src="img/wheel.png" alt="wheel"></div>
+          <div id="arrow"></div>
+
+
+      </div>
+
     </div><div id="rightField">
+
       <div id="scoresWrap"></div>
+
       <div id="prizesWrap"></div>
+
       <div id="giftsWrap"></div>
+
       <div id="hostWrap"></div>
+
     </div>
 
   </div>
