Просто коммит, ничего не готово 2

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 
       <div id="gameWrap">
 
-          <div id="wheel"><img src="img/wheel.png" alt="wheel"></div>
-          <div id="arrow"></div>
+          <div id="wheelWrap">
+              <button id="spin"><img src="img/wheel.png" alt="wheel"></button>
+<!--              <div id="arrow"></div>-->
+          </div>
+
 
 
       </div>
