Просто коммит, ничего не готово 3

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <h1 id="word"></h1>
         <input type="text" id="guessLetter">
         <button id="submitLetter">Ввести букву</button>
-        <input type="text" id="guessWord">
-        <button id="submitWord">Ввести слово</button>
+<!--        <input type="text" id="guessWord">-->
+<!--        <button id="submitWord">Ввести слово</button>-->
+        <h2 id="moveScores"></h2>
       </div>
 
       <div id="gameWrap">
@@ -38,7 +39,9 @@
 
     </div><div id="rightField">
 
-      <div id="scoresWrap"></div>
+      <div id="scoresWrap">
+          <h2 id="scores"></h2>
+      </div>
 
       <div id="prizesWrap"></div>
 
