Просто коммит, ничего не готово 4.

--- a/index.html
+++ b/index.html
@@ -43,11 +43,57 @@
           <h2 id="scores"></h2>
       </div>
 
-      <div id="prizesWrap"></div>
+      <div id="prizesWrap">
 
-      <div id="giftsWrap"></div>
+          <h2>Выберите ваш приз</h2>
+          <div id="prizes">
+              <button id="banana">
+                  <img src="img/banana.png" alt="banana">
+                  <p>100 очков</p>
+              </button>
+              <button id="tv">
+                  <img src="img/tv.png" alt="tv">
+                  <p>200 очков</p>
+              </button>
+              <button id="car">
+                  <img src="img/car.png" alt="car">
+                  <p>300 очков</p>
+              </button>
+          </div>
 
-      <div id="hostWrap"></div>
+
+      </div>
+
+      <div id="giftsWrap">
+          <h2>Выберите подарок ведущему</h2>
+          <div id="gifts">
+              <button id="hat">
+                  <img src="img/hat.png" alt="hat">
+                  <p>100 очков</p>
+              </button>
+              <button id="picules">
+                  <img src="img/picules.png" alt="picules">
+                  <p>200 очков</p>
+              </button>
+              <button id="glasses">
+                  <img src="img/glasses.png" alt="glasses">
+                  <p>300 очков</p>
+              </button>
+          </div>
+      </div>
+      
+
+
+      <div id="hostWrap">
+
+          <div id="giftsOnHost">
+              <img id="host" src="img/host.jpg" alt="host">
+              <img id="hatOnHost" src="img/hat.png" alt="hat">
+              <img id="piculesOnHost" src="img/picules.png" alt="picules">
+              <img id="glassesOnHost" src="img/glasses.png" alt="glasses">
+          </div>
+
+      </div>
 
     </div>
 
