Добавил стрелку. Пока скрыта

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
           <div id="wheelWrap">
               <button id="spin"><img src="img/wheel.png" alt="wheel"></button>
-<!--              <div id="arrow"></div>-->
+<!--              <img id="arrow" src="img/arrow.png" alt="arrow">-->
           </div>
 
 
