Готово со стрелкой

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
           <div id="wheelWrap">
               <button id="spin"><img src="img/wheel.png" alt="wheel"></button>
-<!--              <img id="arrow" src="img/arrow.png" alt="arrow">-->
+              <img id="arrow" src="img/arrow.png" alt="arrow">
           </div>
 
 
